tests/snapshots/claptrap__tests__arg__hide_short_help-2.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_742b933a'
[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

[1m[4mOptions:[0m
      [1m--config[0m <cfg>
          Some help text describing the --config arg

  [1m-h[0m, [1m--help[0m
          Print help (see a summary with '-h')
EOF_742b933a
exit 0
