tests/snapshots/claptrap__tests__arg__index.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_debug='true'
claptrap_mode='fast'
