tests/snapshots/claptrap__tests__arg__num_args-multi_positional1.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_file=('file1' 'file2' 'file3' 'word')
