tests/snapshots/claptrap__tests__arg__num_args-tuples1.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_file=('in-file' 'out-file')
