tests/snapshots/claptrap__tests__arg__num_args-tuples2.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_ad1f8bf9'
[1m[31merror:[0m [32m2[0m values required for '[1m-F <file> <file>[0m' but [33m1[0m was provided

[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

For more information, try '[1m--help[0m'.
EOF_ad1f8bf9
exit 1
