tests/snapshots/claptrap__tests__arg__overrides_with.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_debug='true'
claptrap_color='true'
claptrap_flag='false'
