tests/snapshots/claptrap__tests__arg__overrides_with_all.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_color='true'
claptrap_flag='false'
claptrap_debug='false'
