tests/snapshots/claptrap__tests__arg__require_equals-2.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_0d82cede'
[1m[31merror:[0m equal sign is needed when assigning values to '[33m--config=<cfg>[0m'

[1m[4mUsage:[0m [1mprog[0m [OPTIONS]

For more information, try '[1m--help[0m'.
EOF_0d82cede
exit 1
