tests/snapshots/claptrap__tests__arg__required-2.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_0683a44a'
[1m[31merror:[0m the following required arguments were not provided:
  [32m--config <cfg>[0m

[1m[4mUsage:[0m [1mprog[0m [1m--config[0m <cfg>

For more information, try '[1m--help[0m'.
EOF_0683a44a
exit 1
